--- a/web.html
+++ b/web.html
@@ -21,7 +21,7 @@
   <body>
     <div id="map"></div>
     <script>
-		// This example requires the Places library. Include the libraries=places
+			// This example requires the Places library. Include the libraries=places
 		// parameter when you first load the API. For example:
 		// <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
@@ -30,17 +30,22 @@
 		var pos;
 
 		function initMap() {
-		  var pyrmont = {
-			lat: 35.093333,
-			lng: 33.296041
-		  };
-		  /*var pyrmont = {
-			lat: position.coords.latitude,
-			lng: position.coords.longitude
-		  };*/
+    var s = {
+				lat: 35.00355,//position.coords.latitude,
+				lng: 33.45872//position.coords.longitude
+    }
+ var pyrmont;
+       pyrmont = {
+				lat: 35.00355,//position.coords.latitude,
+				lng: 33.45872//position.coords.longitude
+			};
+		 // var pyrmont = {
+			//lat: position.coords.latitude,
+			//lng: position.coords.longitude
+		  //};
 		  map = new google.maps.Map(document.getElementById('map'), {
-			center: pyrmont,
-			zoom: 15
+			center: s,
+			zoom: 10
 		  });
 		  ///////////////////////////////////
 
@@ -50,9 +55,11 @@
 		  if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(function(position) {
 			  pos = {
-				lat: position.coords.latitude,
-				lng: position.coords.longitude
+          lat: 35.00355,//position.coords.latitude,
+          lng: 33.45872//position.coords.longitude
 			  };
+
+        pyrmont = pos;
 
 			  infoWindow.setPosition(pos);
 			  infoWindow.setContent('Current location');
@@ -106,7 +113,7 @@
 		  }
 		}
 
-		var ii = 0;
+		var ii;
 		var minn = 9999999999999;
 		/*
 		////////////////////////////////////////////////////////////////////////////////|
@@ -135,7 +142,7 @@
 		*/
 		function check(place,indx) {
 			  var dist=Math.sqrt(((place.geometry.location.lng()-pos.lng)*(place.geometry.location.lng()-pos.lng))+((place.geometry.location.lat()-pos.lat)*(place.geometry.location.lat()-pos.lat)));
-			  alert(ii);
+			  //alert(ii);
         if(dist<minn){
 				minn=dist
 				ii=indx;
@@ -144,7 +151,7 @@
 
 		function createMarker(place,ind) {
 		  var image = 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png';
-			if(ind===ii){
+			if(ind==ii){
 			  var placeLoc = place.geometry.location;
 			  var marker = new google.maps.Marker({
 				map: map,
@@ -165,7 +172,6 @@
 			infowindow.open(map, this);
 		  });
 		}
-
 
     </script>
     <script async defer
